# tsubasa

./: .gitignore  BENCHMARK.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  session_start.sh
plugin/skills/capture/: SKILL.md
plugin/skills/delegate/: SKILL.md
plugin/skills/inject/: SKILL.md
plugin/skills/onboard/: SKILL.md
plugin/skills/recall/: SKILL.md
plugin/skills/sync/: SKILL.md
schema/: entity.schema.json  event.schema.json  relation.schema.json  task.schema.json
src/tsubasa/: __init__.py  cli.py  codegraph.py  config.py  distill.py  llm.py  models.py  redact.py  storage.py  tasksync.py  toon.py
src/tsubasa/adapters/: adr.py  base.py  code.py  docs.py  github.py  gitlog.py  incident.py
src/tsubasa/graph/: anchors.py  assemble.py  graphify_bridge.py  query.py  reconcile.py
src/tsubasa/memory/: temperature.py  tiers.py
tests/: test_anchors.py  test_code_adapter.py  test_codegraph.py  test_core.py  test_distill.py  test_git_pull.py  test_goals.py  test_packs.py  test_redact.py  test_sources.py  test_toon.py
