[project]
name = "tsubasa"
version = "0.1.1"
description = "Framework for creating Captains: persistent, domain-expert AI personas for a codebase or organization."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Rama Rahmanda" }]
dependencies = ["pyyaml>=6"]

[project.scripts]
tsubasa = "tsubasa.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsubasa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
